// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaBlock #isActive 1`] = `
<div
  className="RichEditor-media RichEditor-media--open"
>
  <ImageBlock
    entity={
      Object {
        "getType": [Function],
      }
    }
    entityConfig={
      Object {
        "type": "IMAGE",
      }
    }
    isActive={true}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`MediaBlock basic 1`] = `
<div
  className="RichEditor-media"
>
  <ImageBlock
    entity={
      Object {
        "getType": [Function],
      }
    }
    entityConfig={
      Object {
        "type": "IMAGE",
      }
    }
    isActive={false}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`MediaBlock embed 1`] = `
<div
  className="RichEditor-media"
>
  <EmbedBlock
    entity={
      Object {
        "getType": [Function],
      }
    }
    entityConfig={
      Object {
        "type": "EMBED",
      }
    }
    isActive={false}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`MediaBlock image 1`] = `
<div
  className="RichEditor-media"
>
  <ImageBlock
    entity={
      Object {
        "getType": [Function],
      }
    }
    entityConfig={
      Object {
        "type": "IMAGE",
      }
    }
    isActive={false}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;
